# AudioProcesser

./: .gitignore  .gitmodules  README.en.md  README.md
Archived_Workshop/DeepFilterDemo/RealTimeDemo/RealTimeDemo/: Audio.h  CMakeLists.txt  mainwindow.h  mainwindow.ui
Archived_Workshop/DeepFilterDemo/RealTimeDemo/RealTimeDemo/include/df/: deep_filter.h
Archived_Workshop/Noise_Reduction_Benchmark/: ReadMe.md
Archived_Workshop/RealTime-Mic-Algorithm-Testing-Platform/Qt6/: Audio.h  AudioCondition.h  AudioCondition.ui  CMakeLists.txt  main.cpp
Audio/: DownRate.py
Audio/voice/: 1.m4a  (+4 more)
DASP/: IIR_Level2ButterworthFilter.py  IIR_LowpassFilter.py  test.py
DeepFilter/: DeepFilter.py
DeepFilter/DeepFilter_CPP/: CMakeLists.txt  main.cpp
DeepFilter/DeepFilter_CPP/include/: deep_filter.h
DeepFilterDemo/: CMakeLists.txt  main.cpp
DeepFilterDemo/Demo/: main.cpp
DeepFilterDemo/Demo/lib/: deepfilter.def  deepfilter.dll.lib
DeepFilterDemo/RealTimeDemo/RealTimeDemo/: mainwindow.cpp
DeepFilterDemo/lib64/pkgconfig/: deepfilter.pc
Document/: FIR滤波器设计原理.md  IIR滤波器与FIR滤波器相位延迟差定量的推导.md  [DASP]玩机！在组织一套音频系统之前，我们先要知道这套系统里面有什么东西.md  [信号与系统]IIR滤波器和FIR滤波器参数推导的几种算法.md  预畸变计算.md
FIRSimulation/: FIRHighPassFilter.py  FIRHighShelfFilter.py  FIRLowPassFilter.py  FIRLowShelfFilter.py  FIRPeakingFIlter.py  IIRHighPassFilter_Simulate.py  IIRHighShelfFilter_Simulate.py  IIRLowPassFilter_Simulate.py  IIRLowShelfFilter_Simulate.py  IIRPeakingFilter_Simulate.py  PeakingFilter.py
GTCRN-Learning/: GTCRN学习提纲.md  README.md
IIRFilter/: CalculateCore.cpp  different-level-butterworth.py  设计并应用一个IIR-ButterWorth-Filter示例.md
Noise_Reduction_Benchmark/: ReadMe.md
NoisyPrint/: Process.py  Process_NoneSplit.py
RVC/: .env  firstProject.py
Test_Audio/: DownRate.py  UpRate.py
Voice Process/: pitch_analyse.py
WASAPI/: ReadMe.md
WASAPI/AudioCapture/: CMakeLists.txt  main.cpp
WASAPI/AudioCapture/include/: AudioCapture.h
WASAPI/AudioRecorder_Demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
WASAPI/AudioRecorder_Demo/AudioRecorder_Core/: AudioRecorder_Windows.cpp  AudioRecorder_Windows.h  AudioRecorder_core_global.h  CMakeLists.txt  audiorecorder_core.cpp  audiorecorder_core.h
Webrtc_NoisyReduce/: UpRate.py  calculate_FFT_table.m
Webrtc_NoisyReduce/AudioProcessing/: AudioProcessing_example.cpp  CMakeLists.txt
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/: NoiseSuppressor.cc  NoiseSuppressor.h  VoiceActivityDetector.cc  VoiceActivityDetector.h  VoiceActivityDetector2.cc  VoiceActivityDetector2.h  VoiceLevel.h  audio_buffer.cc  audio_buffer.h  audio_frame_view.h  audio_util.cc  audio_util.h  channel_buffer.cc  channel_buffer.h  splitting_filter.cc  splitting_filter.h  stream_config.h  three_band_filter_bank.cc  three_band_filter_bank.h
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/agc2/: available_cpu_features.cc  biquad_filter.cc  biquad_filter.h
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/agc2/rnn_vad/: auto_correlation.cc  auto_correlation.h  features_extraction.cc  features_extraction.h  lp_residual.cc  lp_residual.h  pitch_search.cc  pitch_search.h  pitch_search_internal.cc  pitch_search_internal.h  ring_buffer.h  rnn.cc  rnn.h  rnn_fc.cc  rnn_fc.h  rnn_gru.cc  rnn_gru.h  sequence_buffer.h  spectral_features.cc  spectral_features.h  spectral_features_internal.cc  spectral_features_internal.h  symmetric_matrix_buffer.h  vector_math.h  vector_math_avx2.cc
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/base/: aligned_malloc.cc  arch.h  array_view.h  checks.h  cpu_features.cc  function_view.h  safe_compare.h  safe_conversions.h
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/codecs/isac/: filter_functions.c  filter_functions.h  isac_vad.c  isac_vad.h  os_specific_inline.h  pitch_estimator.c  pitch_estimator.h  pitch_filter.c  pitch_filter.h  structs.h
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/fft/: fft.c
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/ns/: fast_math.cc  fast_math.h  histograms.cc  histograms.h  noise_estimator.cc  noise_estimator.h  ns_config.h  ns_fft.cc  ns_fft.h  prior_signal_model.cc  prior_signal_model_estimator.cc  prior_signal_model_estimator.h  quantile_noise_estimator.cc  quantile_noise_estimator.h  signal_model.cc  signal_model.h  signal_model_estimator.cc  signal_model_estimator.h  speech_probability_estimator.cc  speech_probability_estimator.h  suppression_params.cc  suppression_params.h  wiener_filter.cc  wiener_filter.h
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/pffft/: pffft.c
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/resampler/: push_resampler.cc  push_sinc_resampler.cc  push_sinc_resampler.h  resampler.cc  sinc_resampler.cc  sinc_resampler.h  sinc_resampler_avx2.cc  sinc_resampler_sse.cc
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/rnnoise/: rnn_vad_weights.cc
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/signal_processing/: complex_bit_reverse.c  complex_fft.c  copy_set_operations.c  cross_correlation.c  division_operations.c  downsample_fast.c  energy.c  fft4g.cc  get_scaling_square.c  min_max_operations.c  real_fft.c  resample.c  resample_48khz.c  resample_by_2.c  resample_by_2_internal.c  resample_fractional.c  signal_processing_library.h  spl_init.c  spl_inl.c  spl_inl.h  spl_sqrt_floor.c  splitting_filter_c.c  vector_scaling_operations.c
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/utility/: pffft_wrapper.cc  pffft_wrapper.h
Webrtc_NoisyReduce/AudioProcessing/AudioProcessing/vad/: gmm.cc  pitch_based_vad.cc  pitch_based_vad.h  pitch_internal.cc  pole_zero_filter.cc  standalone_vad.cc  standalone_vad.h  vad_audio_proc.cc  vad_audio_proc.h  vad_circular_buffer.cc  vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_gmm.c  vad_sp.c  vad_sp.h  webrtc_vad.c
gtcrn_onnx_runtime/: CMakeLists.txt  main.cpp  readme.md
gtcrn_onnx_runtime/STFT/: STFT.cpp
gtcrn_onnx_runtime/demo/: main.cpp
gtcrn_onnx_runtime/src/: src.cpp
gtcrn_onnx_runtime/wav_reader/: wav_reader.cpp
hubert_onnx/: hubert_eval.py  hubert_export.py  test.py
(+183 files in other folders)
